--- a/libs/sistema/theme/tokens/_typography.tokens.scss
+++ b/libs/sistema/theme/tokens/_typography.tokens.scss
@@ -28,7 +28,7 @@ $font-size-base: 1rem;
 $font-size: (
   xxs: ($font-size-base * .625),  // 10px - 0.625 rem
   xs: ($font-size-base * .75),    // 12px - 0.75 rem
-  s:  ($font-size-base * .9375),  // 15px - 0.9375 rem
+  s:  ($font-size-base * .875),   // 14px - 0.875 rem
   m:  $font-size-base,            // 16px - 1 rem
   l:  ($font-size-base * 1.125),  // 18px - 1.125 rem
   xl:  ($font-size-base * 1.25),  // 20px - 1.25 rem
@@ -63,11 +63,11 @@ $font-size-display-m-md: font-size(d2-md);
 
 // Line height
 $line-height: (
-  s:  ($font-size-base * .875),    // 14px -  .875 rem
-  m:  ($font-size-base * 1.125),   // 18px - 1.125 rem
-  l:  ($font-size-base * 1.1875),  // 19px - 1.1875 rem
-  xl: ($font-size-base * 1.3125),  // 21px - 1.3125 rem
-  xxl: ($font-size-base * 1.375),  // 22px - 1.375 rem
+  s:  ($font-size-base * 1),      // 16px - 1 rem
+  m:  ($font-size-base * 1.25),   // 20px - 1.25 rem
+  l:  ($font-size-base * 1.5),    // 24px - 1.5 rem
+  xl: ($font-size-base * 1.75),   // 28px - 1.75 rem
+  xxl: ($font-size-base * 2),     // 32px - 2 rem
   // display
   d1:     ($font-size-base * 1.625),  // 26px - 1.625 rem
   d1-md:  ($font-size-base * 1.75),   // 28px - 1.75 rem
