--- a/libs/search-widget/src/_video-widget/VideoTile.scss
+++ b/libs/search-widget/src/_video-widget/VideoTile.scss
@@ -1,11 +1,12 @@
 .sw-video-tile {
+  --paragraph-height: var(--rhythm-4);
+  --paragraph-gap: var(--rhythm-0_5);
+  --expanded-background-color: var(--color-neutral-light);
+
   display: flex;
   flex-direction: column;
+  position: relative;
   transition: background var(--transition-superfast);
-
-  &:not(.expanded) {
-    gap: var(--rhythm-1);
-  }
 
   h3 {
     font-size: var(--font-size-title-m-mobile);
@@ -24,23 +25,23 @@
     line-height: var(--rhythm-3);
     margin-top: var(--rhythm-2);
     transition: color var(--transition-superfast);
+
+    .icon {
+      display: flex;
+      transition: transform var(--transition-superfast);
+    }
+    &.expanded .icon {
+      transform: rotate(-90deg);
+    }
   }
 
-  .all-result-toggle .icon {
-    display: flex;
-    transition: transform var(--transition-superfast);
-  }
 
-  .all-result-toggle.expanded .icon {
-    transform: rotate(-90deg);
+  .thumbnail-container {
+    position: relative;
   }
 
   .paragraphs-container {
-    --paragraph-height: var(--rhythm-4);
-    --paragraph-gap: var(--rhythm-0_5);
-
     display: flex;
-    flex: 0 0 auto;
     flex-direction: column;
     gap: var(--paragraph-gap);
     list-style: none;
@@ -48,54 +49,53 @@
     padding: 0;
   }
 
-  .result-details .paragraphs-container {
+  &:not(.expanded) .result-details .paragraphs-container {
     height: calc(
       var(--paragraph-height) * var(--paragraph-count) + var(--paragraph-gap) * (var(--paragraph-count) - 1)
     );
     transition: height var(--transition-fast);
-  }
 
-  .result-details .paragraphs-container.can-expand:not(.expanded) {
-    height: calc(var(--paragraph-height) * 4 + var(--paragraph-gap) * 3);
-    overflow: hidden;
+    &.can-expand:not(.expanded) {
+      height: calc(var(--paragraph-height) * 4 + var(--paragraph-gap) * 3);
+      overflow: hidden;
+    }
   }
 
   &.expanded {
-    background: var(--color-neutral-lightest);
-    flex-direction: column;
-  }
+    --header-height: var(--rhythm-7);
 
-  &.expanded header {
-    align-items: center;
-    align-self: stretch;
-    display: flex;
-    gap: var(--rhythm-0_5);
-    justify-content: space-between;
-    padding: var(--rhythm-2);
-  }
+    &:not(.showFullTranscripts) {
+      --paragraph-gap: var(--rhythm-3);
+    }
 
-  &.expanded header h3 {
-    margin: 0;
-  }
+    background: var(--expanded-background-color);
+    padding-top: var(--header-height);
 
-  &.expanded .youtube-container {
-    background-color: var(--color-neutral-light);
-    width: 100%;
+    header {
+      align-items: center;
+      align-self: stretch;
+      display: flex;
+      gap: var(--rhythm-0_5);
+      justify-content: space-between;
+      left: 0;
+      padding: var(--rhythm-0_5) var(--rhythm-0_5) var(--rhythm-0_5) var(--rhythm-2);
+      position: absolute;
+      right: 0;
+      top: 0;
+
+      h3 {
+        margin: 0;
+      }
+    }
   }
 
   &.expanded .youtube-container.loading {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+    position: absolute;
   }
 
   &.expanded .summary-container,
   &.expanded .find-bar-container {
     display: none;
-  }
-
-  &.expanded .paragraphs-container {
-    gap: var(--rhythm-3);
   }
 
   &.expanded .side-panel {
@@ -113,34 +113,54 @@
     cursor: pointer;
     display: flex;
     justify-content: space-between;
-    margin: var(--rhythm-1) 0;
-    padding: var(--rhythm-1_5);
-  }
 
-  &.expanded .transcript-expander-header .transcript-expander-header-chevron {
-    transition: transform var(--transition-superfast);
-  }
+    &.with-spacing {
+      padding: var(--rhythm-1_5);
+      margin: 0 0 var(--rhythm-1);
+    }
 
-  &.expanded .transcript-expander-header.expanded .transcript-expander-header-chevron {
-    transform: rotate(90deg);
-  }
-
-  &.expanded .transcript-expander-header:focus {
-    box-shadow: var(--focus-shadow);
-    outline: 0;
+    // remove the focus style when clicking
+    &:focus:not(:focus-visible) {
+      outline: 0;
+    }
+    &:focus-visible {
+      box-shadow: var(--focus-shadow);
+      outline: 0;
+    }
+    .transcript-expander-header-chevron {
+      display: flex;
+      transition: transform var(--transition-moderate);
+    }
+    &.expanded .transcript-expander-header-chevron {
+      transform: rotate(90deg);
+    }
   }
 }
 
-@media (min-width: 600px) {
+@media (max-width: 647px) {
   .sw-video-tile {
-    --width-thumbnail: var(--rhythm-28);
+    &.expanded header h3 {
+      font-size: var(--font-size-base);
+    }
+  }
+}
+@media (min-width: 648px) {
+  .sw-video-tile {
     --flex-gap: var(--rhythm-2);
+    --paragraph-height: var(--rhythm-3);
 
-    align-items: center;
     flex-direction: row;
+    gap: var(--flex-gap);
 
     &:not(.expanded) {
-      gap: var(--flex-gap);
+      --width-thumbnail: var(--rhythm-28);
+
+      align-items: center;
+
+      .result-details {
+        flex: 1 0 auto;
+        width: calc(100% - var(--width-thumbnail) - var(--flex-gap));
+      }
     }
 
     h3 {
@@ -152,22 +172,19 @@
       align-self: flex-start;
     }
 
-    .result-details {
-      width: calc(100% - var(--width-thumbnail) - var(--flex-gap));
-    }
-
-    .paragraphs-container {
-      --paragraph-height: var(--rhythm-3);
-    }
-
-    &.expanded header {
-      gap: var(--rhythm-2);
+    &.expanded {
+      header {
+        gap: var(--rhythm-2);
+      }
     }
   }
 }
-@media (max-width: 1023px) {
+@media (max-width: 820px) {
   .sw-video-tile {
     &.expanded {
+      --youtube-height: calc(100vw * 9 / 16);
+
+      flex-direction: column;
       height: 100vh;
       left: 0;
       overflow: hidden;
@@ -175,29 +192,33 @@
       right: 0;
       top: 0;
       z-index: 1000;
-    }
 
-    &.expanded .youtube-container {
-      height: calc(100vw * 9 / 16);
+      .thumbnail-container {
+        width: 100%;
+      }
+      .youtube-container {
+        height: var(--youtube-height);
+      }
+      .result-details {
+        height: calc(100vh - var(--header-height) - var(--youtube-height));
+        overflow: auto;
+        width: 100%;
+      }
     }
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 821px) {
   .sw-video-tile {
     &.expanded {
+      --side-panel-width: var(--rhythm-39);
+      --youtube-height: calc((100vw - var(--side-panel-width)) * 9 / 16);
+      // initialize --video-tile-height with youtube height the time for setupExpandedTile method to be called
+      --video-tile-height: var(--youtube-height);
+
       border-radius: var(--border-radius);
-      gap: 0;
-      padding: 0 var(--rhythm-2) var(--rhythm-2) var(--rhythm-2);
-    }
-
-    &.expanded header {
-      padding: var(--rhythm-2) 0;
-    }
-
-    &.expanded .expanded-tile-content {
-      display: flex;
-      gap: var(--rhythm-2);
+      max-height: calc(100vh - var(--header-height) - var(--rhythm-4));
+      padding: var(--header-height) var(--rhythm-2) var(--rhythm-2) var(--rhythm-2);
     }
 
     &.expanded .summary-container {
@@ -205,22 +226,31 @@
       margin-top: var(--rhythm-3);
     }
 
+    &.expanded .result-details {
+      max-height: calc(var(--video-tile-height) - var(--header-height) - var(--rhythm-2));
+    }
     &.expanded .side-panel {
+      --find-input-height: var(--rhythm-5);
+      --find-input-margin: var(--rhythm-1);
+
       display: flex;
       flex: 1 0 auto;
       flex-direction: column;
-      padding: 0 0 var(--rhythm-2);
-      width: var(--rhythm-56);
+      max-height: 100%;
+      padding: 0;
+      width: var(--side-panel-width);
     }
 
     &.expanded .find-bar-container {
       align-items: center;
       background: var(--color-light-stronger);
+      border-bottom: var(--find-input-margin) solid var(--expanded-background-color);
       display: flex;
-      height: var(--rhythm-5);
       gap: var(--rhythm-1);
-      margin-bottom: var(--rhythm-1);
       padding-left: var(--rhythm-1);
+      position: sticky;
+      top: 0;
+      z-index: 1;
     }
 
     &.expanded .find-bar-container .find-input {
@@ -231,15 +261,36 @@
       font-family: inherit;
       font-size: var(--font-size-base);
       font-weight: var(--font-weight-body);
-      line-height: var(--rhythm-4);
+      line-height: var(--find-input-height);
+      padding: 0;
     }
 
     &.expanded .find-bar-container .find-input:focus {
       outline: 0;
     }
+
+    &.expanded .search-result-paragraphs {
+      --full-transcript-header: var(--rhythm-8);
+      border-bottom: var(--rhythm-1) solid var(--expanded-background-color);
+      min-height: var(--rhythm-3);
+      max-height: calc(100% - var(--find-input-height) - var(--find-input-margin) - var(--full-transcript-header));
+      overflow: auto;
+      position: sticky;
+      top: calc(var(--find-input-height) + var(--find-input-margin));
+      z-index: 1;
+    }
+
+    &.expanded .on-animation {
+      overflow: hidden;
+    }
   }
 }
 
+@media (min-width: 1024px) {
+  .sw-video-tile.expanded {
+    --side-panel-width: var(--rhythm-53);
+  }
+}
 @media (hover: hover) {
   .sw-video-tile .all-result-toggle:hover {
     color: var(--color-neutral-strong);
