--- a/libs/search-widget/src/common-style.scss
+++ b/libs/search-widget/src/common-style.scss
@@ -55,8 +55,10 @@
   --rhythm-24: calc(var(--spacer) * 24);     /*  24   unit - 192px */
   --rhythm-28: calc(var(--spacer) * 28);     /*  28   unit - 224px */
   --rhythm-32: calc(var(--spacer) * 32);     /*  32   unit - 256px */
+  --rhythm-39: calc(var(--spacer) * 39);     /*  39   unit - 312px */
   --rhythm-40: calc(var(--spacer) * 40);     /*  40   unit - 320px */
   --rhythm-48: calc(var(--spacer) * 48);     /*  48   unit - 384px */
+  --rhythm-53: calc(var(--spacer) * 53);     /*  53   unit - 424px */
   --rhythm-56: calc(var(--spacer) * 56);     /*  56   unit - 448px */
   --rhythm-64: calc(var(--spacer) * 64);     /*  64   unit - 512px */
 
@@ -77,6 +79,7 @@
   /* TRANSITIONS */
   --transition-superfast: 0.16s ease-in-out;
   --transition-fast: 0.24s ease;
+  --transition-moderate: 0.480s ease;
 
 
   /* TOKEN */
@@ -91,7 +94,7 @@
   --color-scrollbar-track: var(--custom-color-scrollbar-track, var(--color-light-stronger));
   --color-scrollbar-thumb: var(--custom-color-scrollbar-thumb, var(--color-dark-stronger));
 
-  --focus-shadow: var(--custom-focus-shadow, 0 0 0 var(--rhythm-0_25) var(--color-primary-lighter));
+  --focus-shadow: var(--custom-focus-shadow, inset 0 0 0 var(--rhythm-0_25) var(--color-primary-lighter));
   --shadow-small: 1px 1px 2px rgba(var(--color-dark-stronger-rgb), 0.3);
 
   --size-powered-by: calc(var(--rhythm-16) + var(--rhythm-1_5));
