[sc-2301]: Re-align Sistema neutral colors
Move neutral colors to the right (so $color-neutral-strong becomes $color-neutral-regular) and $color-neutral-lightest will be out of palette and be used specifically as a background

--- a/apps/dashboard/src/app/account/billing/plans/plans.component.scss
+++ b/apps/dashboard/src/app/account/billing/plans/plans.component.scss
@@ -34,7 +34,7 @@ $column-header: 128px;
 }
 
 .parameter-group {
-  border-bottom: 1px solid $color-neutral-strong;
+  border-bottom: 1px solid $color-neutral-regular;
   &:last-child {
     border-bottom: 0;
   }
@@ -128,7 +128,7 @@ $column-header: 128px;
     right: 0;
     font-size: var(--stf-font-size-ssmall);
     font-weight: var(--stf-font-weight-light);
-    color: $color-neutral-strong;
+    color: $color-neutral-regular;
   }
 }
 
