--- a/apps/dashboard/src/app/components/hint/hint.component.scss
+++ b/apps/dashboard/src/app/components/hint/hint.component.scss
@@ -18,7 +18,7 @@
 .hint-title {
   display: flex;
   align-items: center;
-  color: $color-neutral-strong;
+  color: $color-neutral-regular;
 
   pa-icon {
     display: inline-block;
