--- a/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-palette/sistema-palette.component.scss
+++ b/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-palette/sistema-palette.component.scss
@@ -1,5 +1,5 @@
 @import "apps/sistema-demo/src/variables";
 
 .color-neutral-strong {
-  background-color: $color-neutral-strong;
+  background-color: $color-neutral-regular;
 }
