--- a/libs/sistema/theme/_pastanaga-core-overrides.scss
+++ b/libs/sistema/theme/_pastanaga-core-overrides.scss
@@ -8,6 +8,7 @@ overrides for:
     theme/layout
     theme/scrollbar
  */
+@import "tokens/palette.tokens";
 @import "tokens/spacing.tokens";
 @import "tokens/typography.tokens";
 @import "tokens/scrollbar.tokens";
