--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -69,12 +69,12 @@ $color-background-button-destructive-basic-active: $color-secondary-lighter;
 //---------------------------------------------------------------
 // INVERTED
 //---------------------------------------------------------------
-$color-text-button-inverted-solid: $color-neutral-strong;
+$color-text-button-inverted-solid: $color-neutral-regular;
 $color-text-button-inverted-solid-hover: $color-dark-stronger;
 $color-text-button-inverted-solid-active: $color-light-stronger;
 
-$color-background-button-inverted-solid: $color-neutral-lightest;
-$color-background-button-inverted-solid-hover: $color-neutral-lightest;
+$color-background-button-inverted-solid: $color-neutral-background;
+$color-background-button-inverted-solid-hover: $color-neutral-background;
 $color-background-button-inverted-solid-active: $color-neutral-regular;
 
 
