--- a/libs/sistema/theme/tokens/_palette.tokens.scss
+++ b/libs/sistema/theme/tokens/_palette.tokens.scss
@@ -5,11 +5,12 @@ $color-dark-stronger: hsl(0, 0%, 5%);
 
 $color-light-stronger: #fff;
 
-$color-neutral-strong:    hsl(0, 0%, 44%);
-$color-neutral-regular:   hsl(0, 0%, 77%);
-$color-neutral-light:     hsl(0, 0%, 90%);
-$color-neutral-lighter:   hsl(0, 0%, 94%);
-$color-neutral-lightest:  hsl(240, 7%, 97%);
+$color-neutral-regular:   hsl(0, 0%, 44%);
+$color-neutral-light:     hsl(0, 0%, 77%);
+$color-neutral-lighter:   hsl(0, 0%, 90%);
+$color-neutral-lightest:  hsl(0, 0%, 94%);
+
+$color-neutral-background:  hsl(240, 7%, 97%);
 
 $color-primary-stronger:    hsl(336, 100%, 24%);
 $color-primary-strong:      hsl(336, 100%, 36%);
