--- a/libs/sistema/theme/tokens/_toggle.tokens.scss
+++ b/libs/sistema/theme/tokens/_toggle.tokens.scss
@@ -1,7 +1,7 @@
 @import "./palette.tokens";
 
 $color-background-toggle-selected: $color-dark-stronger;
-$color-background-toggle-selected-hover: $color-neutral-strong;
+$color-background-toggle-selected-hover: $color-neutral-regular;
 $color-background-toggle-disabled: $color-neutral-light;
 $color-background-toggle-unselected-disabled: $color-light-stronger;
 
