Search results – let a bit less space between videos
There is some white space above and below the video thumbnail because the thumbnail height is computed to fit the width based on 4/5 ratio.
So we need to reduce the gap between the video tile to take this space into account and have ~24px between videos.

--- a/libs/search-widget/src/_video-widget/SearchResults.scss
+++ b/libs/search-widget/src/_video-widget/SearchResults.scss
@@ -11,5 +11,11 @@
 .results {
   display: flex;
   flex-direction: column;
-  gap: var(--rhythm-3);
+  gap: var(--rhythm-2);
+}
+
+@media (min-width: 648px) {
+  .results {
+    gap: var(--rhythm-1);
+  }
 }
