--- a/libs/search-widget/src/components/toggle/toggle.scss
+++ b/libs/search-widget/src/components/toggle/toggle.scss
@@ -19,7 +19,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: var(--color-neutral-strong);
+    background-color: var(--color-neutral-regular);
     -webkit-transition: 0.4s;
     transition: 0.4s;
     border-radius: 18px;
