--- a/libs/search-widget/src/viewer/Header.scss
+++ b/libs/search-widget/src/viewer/Header.scss
@@ -5,7 +5,7 @@
   min-height: 76px;
   padding-left: 1em;
   background-color: var(--color-light-stronger);
-  border-bottom: 1px solid var(--color-neutral-regular);
+  border-bottom: 1px solid var(--color-neutral-light);
 
   .icon {
     width: 22px;
