--- a/libs/search-widget/src/widgets/row/Thumbnail.scss
+++ b/libs/search-widget/src/widgets/row/Thumbnail.scss
@@ -6,7 +6,7 @@
   }
 
   .thumbnail-background {
-    background-color: var(--color-neutral-lighter);
+    background-color: var(--color-neutral-lightest);
   }
 
   .thumbnail-placeholder {
