--- a/libs/search-widget/src/common-style.scss
+++ b/libs/search-widget/src/common-style.scss
@@ -4,11 +4,12 @@
   --color-dark-stronger-rgb: 13, 13, 13;
   --color-light-stronger: var(--custom-color-light-stronger, #fff);
 
-  --color-neutral-strong: var(--custom-color-neutral-strong, hsl(0, 0%, 44%));
-  --color-neutral-regular: var(--custom-color-neutral-regular, hsl(0, 0%, 77%));
-  --color-neutral-light: var(--custom-color-neutral-light, hsl(0, 0%, 90%));
-  --color-neutral-lighter: var(--custom-color-neutral-lighter, hsl(0, 0%, 94%));
-  --color-neutral-lightest: var(--custom-color-neutral-lightest, hsl(240, 7%, 97%));
+  --color-neutral-regular: var(--custom-color-neutral-strong, hsl(0, 0%, 44%));
+  --color-neutral-light: var(--custom-color-neutral-regular, hsl(0, 0%, 77%));
+  --color-neutral-lighter: var(--custom-color-neutral-light, hsl(0, 0%, 90%));
+  --color-neutral-lightest: var(--custom-color-neutral-lighter, hsl(0, 0%, 94%));
+
+  --color-neutral-background: var(--custom-color-neutral-lightest, hsl(240, 7%, 97%));
 
   --color-primary-stronger: var(--custom-color-primary-stronger, hsl(336, 100%, 24%));
   --color-primary-strong: var(--custom-color-primary-strong, hsl(336, 100%, 36%));
@@ -105,9 +106,9 @@
   --form-widget-border-width: var(--custom-form-widget-border-width, 1px);
   --form-widget-border-style: var(--custom-form-widget-border-style, solid);
   --form-widget-border-style-stronger: var(--custom-form-widget-border-style-stronger, solid);
-  --form-widget-border-color: var(--custom-form-widget-border-color, var(--color-neutral-strong));
+  --form-widget-border-color: var(--custom-form-widget-border-color, var(--color-neutral-regular));
   --form-widget-border-radius: var(--custom-form-widget-border-radius, 0);
-  --form-widget-placeholder-color: var(--custom-form-widget-placeholder-color, --color-neutral-strong);
+  --form-widget-placeholder-color: var(--custom-form-widget-placeholder-color, --color-neutral-regular);
 
   --input-widget-padding: var(--custom-input-widget-padding, var(--search-input-padding));
   --input-widget-border-width: var(--custom-input-widget-border-width, 0 0 1px 0);
@@ -124,7 +125,7 @@
   --resource-modal-height: var(--custom-resource-modal-height, calc(100vh - var(--rhythm-16)));
   --resource-modal-height-md: var(--custom-resource-modal-height-md, 85vh);
 
-  --search-bar-border: var(--custom-search-bar-border, 1px solid var(--color-neutral-strong));
+  --search-bar-border: var(--custom-search-bar-border, 1px solid var(--color-neutral-regular));
   --search-bar-border-focus: var(--custom-search-bar-border-focus, 1px solid var(--color-primary-regular));
   --search-bar-border-radius: var(--custom-search-bar-border-radius, 0);
   --search-bar-padding: var(--custom-search-bar-padding, var(--default-search-field-padding));
