--- a/libs/search-widget/src/widgets/results/Results.scss
+++ b/libs/search-widget/src/widgets/results/Results.scss
@@ -24,7 +24,7 @@
   .result {
     margin-bottom: 2em;
     padding-bottom: 1em;
-    border-bottom: 1px solid var(--color-neutral-regular);
+    border-bottom: 1px solid var(--color-neutral-light);
   }
 
   .result:last-child {
@@ -35,7 +35,7 @@
   .box {
     margin: 0 -1.25em;
     padding: 2.25em 1.25em;
-    background-color: var(--color-neutral-lightest);
+    background-color: var(--color-neutral-background);
     border-radius: 4px;
   }
 
@@ -64,7 +64,7 @@
     padding: 0.5em 1em;
     border: 0;
     background: var(--color-light-stronger);
-    color: var(--color-neutral-strong);
+    color: var(--color-neutral-regular);
     font: inherit;
     font-weight: var(--font-weight-semi-bold);
     cursor: pointer;
