Hovering paragraph improvements
  - Search results: round corners on both sides
  - Video tile: full width paragraph in transcripts
  - Background transition on TimePlayer and ParagraphPlayer

--- a/libs/search-widget/src/_video-widget/TimePlayer.scss
+++ b/libs/search-widget/src/_video-widget/TimePlayer.scss
@@ -9,6 +9,7 @@
   max-width: var(--rhythm-9);
   padding: 0 var(--rhythm-1_5) 0 var(--rhythm-1);
   position: relative;
+  transition: background-color var(--transition-superfast);
 
   &.minimized {
     border-radius: 50%;
