--- a/apps/dashboard/src/app/upload/upload-files/upload-files.component.scss
+++ b/apps/dashboard/src/app/upload/upload-files/upload-files.component.scss
@@ -32,7 +32,7 @@ h1 {
   margin-bottom: rhythm(4);
   border: 2px dashed #ccc;
   color: rgba(0, 0, 0, 0.5);
-  min-height: 94px;
+  min-height: rhythm(12);
   cursor: pointer;
   transition: border-color 0.15s;
   span {
