Fix scrolling behavior on fullscreen preview

--- a/libs/search-widget/src/_video-widget/ParagraphPlayer.scss
+++ b/libs/search-widget/src/_video-widget/ParagraphPlayer.scss
@@ -10,7 +10,7 @@
   &.stack {
     flex-direction: column;
     gap: var(--rhythm-0_5);
-    padding: var(--rhythm-1_5);
+    padding: var(--rhythm-2);
   }
   .paragraph-text {
     overflow-wrap: break-word;
