[sc-2342] video tile improvements (#252)
* Search results improvements

 – align all content to the top of the video
 - keep the same font size for titles on desktop and on mobile (font-size: 18px, line-height: 26px)

* [sc-2301]: Re-align Sistema neutral colors

Fix all-result-toggle color

* Wait two seconds before displaying the loading dots

Add Duration enum to make it easier to manage Svelte transition duration

* Search results – let a bit less space between videos

There is some white space above and below the video thumbnail because the thumbnail height is computed to fit the width based on 4/5 ratio.
So we need to reduce the gap between the video tile to take this space into account and have ~24px between videos.

* Fix show-all-results transition

* Hovering paragraph improvements

  - Search results: round corners on both sides
  - Video tile: full width paragraph in transcripts
  - Background transition on TimePlayer and ParagraphPlayer

* Fix selected paragraph

* Fix thumbnail loading transition and height

* Search results: display video and texts at the same time

* Scrollable area doesn't include find bar and collapsed search results

* Fix scrolling behavior on fullscreen preview

* Keep Full transcript header visible when scrolling

--- a/libs/search-widget/src/_video-widget/TimePlayer.scss
+++ b/libs/search-widget/src/_video-widget/TimePlayer.scss
@@ -1,6 +1,6 @@
 .sw-time-player {
   align-items: center;
-  background: var(--color-neutral-lightest);
+  background: var(--color-neutral-background);
   border-radius: var(--rhythm-4);
   cursor: pointer;
   display: flex;
@@ -9,6 +9,7 @@
   max-width: var(--rhythm-9);
   padding: 0 var(--rhythm-1_5) 0 var(--rhythm-1);
   position: relative;
+  transition: background-color var(--transition-superfast);
 
   &.minimized {
     border-radius: 50%;
@@ -19,7 +20,7 @@
   }
 
   &:active {
-    background: var(--color-neutral-regular);
+    background: var(--color-neutral-light);
   }
   &:focus {
     box-shadow: var(--focus-shadow);
@@ -40,6 +41,6 @@
 }
 @media (hover: hover) {
   .sw-time-player:not(.hovering):hover {
-    background: var(--color-neutral-light);
+    background: var(--color-neutral-lighter);
   }
 }
