--- a/libs/search-widget/src/_video-widget/ParagraphPlayer.scss
+++ b/libs/search-widget/src/_video-widget/ParagraphPlayer.scss
@@ -2,6 +2,7 @@
   cursor: pointer;
   display: flex;
   gap: var(--rhythm-1);
+  transition: background-color var(--transition-superfast);
 
   &:not(.stack) {
     align-items: center;
@@ -9,6 +10,7 @@
   &.stack {
     flex-direction: column;
     gap: var(--rhythm-0_5);
+    padding: var(--rhythm-2);
   }
   .paragraph-text {
     overflow-wrap: break-word;
@@ -16,12 +18,15 @@
 }
 
 @media (hover: hover) {
-  .sw-paragraph-player:hover {
-    background-color: var(--color-neutral-lightest);
-    border-top-left-radius: var(--rhythm-1_5);
+  .sw-paragraph-player:not(.stack) .paragraph-text {
+    padding-right: var(--rhythm-1_5);
   }
 
-  .sw-paragraph-player:not(.stack):hover {
-    border-bottom-left-radius: var(--rhythm-1_5);
+  .sw-paragraph-player:hover {
+    background-color: var(--color-neutral-background);
+  }
+
+  .sw-paragraph-player:not(.stack) {
+    border-radius: var(--rhythm-1_5);
   }
 }
