--- a/libs/search-widget/src/_video-widget/VideoTile.scss
+++ b/libs/search-widget/src/_video-widget/VideoTile.scss
@@ -1,7 +1,7 @@
 .sw-video-tile {
   --paragraph-height: var(--rhythm-4);
   --paragraph-gap: var(--rhythm-0_5);
-  --expanded-background-color: var(--color-neutral-light);
+  --expanded-background-color: var(--color-neutral-lighter);
 
   display: flex;
   flex-direction: column;
@@ -23,7 +23,7 @@
     font-weight: var(--font-weight-semi-bold);
     gap: var(--rhythm-1);
     line-height: var(--rhythm-3);
-    margin-top: var(--rhythm-2);
+    margin-top: var(--rhythm-1);
     transition: color var(--transition-superfast);
 
     .icon {
@@ -43,30 +43,27 @@
   .paragraphs-container {
     display: flex;
     flex-direction: column;
-    gap: var(--paragraph-gap);
     list-style: none;
     margin: 0;
     padding: 0;
   }
 
   &:not(.expanded) .result-details .paragraphs-container {
+    gap: var(--paragraph-gap);
     height: calc(
       var(--paragraph-height) * var(--paragraph-count) + var(--paragraph-gap) * (var(--paragraph-count) - 1)
     );
+    overflow: hidden;
     transition: height var(--transition-fast);
 
     &.can-expand:not(.expanded) {
       height: calc(var(--paragraph-height) * 4 + var(--paragraph-gap) * 3);
-      overflow: hidden;
     }
   }
 
   &.expanded {
     --header-height: var(--rhythm-7);
-
-    &:not(.showFullTranscripts) {
-      --paragraph-gap: var(--rhythm-3);
-    }
+    --collapsible-header-height: var(--rhythm-6);
 
     background: var(--expanded-background-color);
     padding-top: var(--header-height);
@@ -98,14 +95,13 @@
     display: none;
   }
 
-  &.expanded .side-panel {
+  &.expanded .side-panel .scrollable-area {
+    min-height: var(--collapsible-header-height);
     overflow: auto;
-    padding: var(--rhythm-2);
   }
 
   &.expanded .transcript-container {
     background: var(--color-light-stronger);
-    padding: var(--rhythm-1_5);
   }
 
   &.expanded .transcript-expander-header {
@@ -113,11 +109,7 @@
     cursor: pointer;
     display: flex;
     justify-content: space-between;
-
-    &.with-spacing {
-      padding: var(--rhythm-1_5);
-      margin: 0 0 var(--rhythm-1);
-    }
+    padding: var(--rhythm-1_5);
 
     // remove the focus style when clicking
     &:focus:not(:focus-visible) {
@@ -155,17 +147,10 @@
     &:not(.expanded) {
       --width-thumbnail: var(--rhythm-28);
 
-      align-items: center;
-
       .result-details {
         flex: 1 0 auto;
         width: calc(100% - var(--width-thumbnail) - var(--flex-gap));
       }
-    }
-
-    h3 {
-      font-size: var(--font-size-title-m);
-      line-height: var(--line-height-title-m);
     }
 
     .thumbnail-container {
@@ -200,9 +185,19 @@
         height: var(--youtube-height);
       }
       .result-details {
-        height: calc(100vh - var(--header-height) - var(--youtube-height));
-        overflow: auto;
+        --side-panel-height: calc(100vh - var(--header-height) - var(--youtube-height));
+        height: var(--side-panel-height);
+        overflow: hidden;
         width: 100%;
+
+        .scrollable-area {
+          max-height: calc(var(--side-panel-height) - var(--collapsible-header-height)*2);
+        }
+
+        .search-result-paragraphs {
+          overflow: auto;
+          max-height: calc(var(--side-panel-height) - var(--collapsible-header-height));
+        }
       }
     }
   }
@@ -231,7 +226,13 @@
     }
 
     &.expanded .result-details {
-      max-height: calc(var(--video-tile-height) - var(--header-height) - var(--rhythm-2));
+      --result-details-height: calc(var(--video-tile-height) - var(--header-height) - var(--rhythm-2));
+      max-height: var(--result-details-height);
+
+      .scrollable-area {
+        max-height: calc(var(--result-details-height) - var(--collapsible-header-height)*3);
+        overflow: auto;
+      }
     }
     &.expanded .side-panel {
       --find-input-height: var(--rhythm-5);
@@ -241,20 +242,16 @@
       flex: 1 0 auto;
       flex-direction: column;
       max-height: 100%;
-      padding: 0;
       width: var(--side-panel-width);
     }
 
     &.expanded .find-bar-container {
       align-items: center;
       background: var(--color-light-stronger);
-      border-bottom: var(--find-input-margin) solid var(--expanded-background-color);
       display: flex;
       gap: var(--rhythm-1);
+      margin-bottom: var(--find-input-margin);
       padding-left: var(--rhythm-1);
-      position: sticky;
-      top: 0;
-      z-index: 1;
     }
 
     &.expanded .find-bar-container .find-input {
@@ -275,13 +272,13 @@
 
     &.expanded .search-result-paragraphs {
       --full-transcript-header: var(--rhythm-8);
-      border-bottom: var(--rhythm-1) solid var(--expanded-background-color);
-      min-height: var(--rhythm-3);
+      min-height: var(--collapsible-header-height);
       max-height: calc(100% - var(--find-input-height) - var(--find-input-margin) - var(--full-transcript-header));
       overflow: auto;
-      position: sticky;
-      top: calc(var(--find-input-height) + var(--find-input-margin));
-      z-index: 1;
+    }
+
+    &.expanded .full-transcript-container {
+      min-height: var(--collapsible-header-height);
     }
 
     &.expanded .on-animation {
@@ -297,6 +294,6 @@
 }
 @media (hover: hover) {
   .sw-video-tile .all-result-toggle:hover {
-    color: var(--color-neutral-strong);
+    color: var(--color-dark-stronger);
   }
 }
