--- a/libs/search-widget/src/widgets/row/Thumbnail.scss
+++ b/libs/search-widget/src/widgets/row/Thumbnail.scss
@@ -1,4 +1,6 @@
 .sw-thumbnail {
+  display: flex;
+
   img {
     object-fit: contain;
     object-position: center;
@@ -6,7 +8,7 @@
   }
 
   .thumbnail-background {
-    background-color: var(--color-neutral-lighter);
+    background-color: var(--color-neutral-lightest);
   }
 
   .thumbnail-placeholder {
