[sc-2376] Do not make automatic SAML authentication

--- a/libs/common/src/lib/user/login/login.component.html
+++ b/libs/common/src/lib/user/login/login.component.html
@@ -17,8 +17,7 @@
                       autocapitalize="off"
                       name="username"
                       [errorMessages]="loginValidationMessages.email"
-                      (enter)="onEnterPressed('email')"
-                      (blurring)="checkSAML(form.email.value)">
+                      (enter)="onEnterPressed('email')">
               {{ 'login.email' | translate }}
             </pa-input>
           </div>
