--- a/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.scss
+++ b/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.scss
@@ -10,12 +10,12 @@ label {
 }
 
 .delete-user {
-  margin: rhythm(4) 0;
+  margin: rhythm(4) 0 rhythm(3) 0;
 }
 
-pa-radio-group > div {
-  display: flex;
-  gap: rhythm(5);
+pa-radio {
+  display: inline-block;
+  margin-right: rhythm(5);
 }
 
 pa-modal-footer {
