--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
@@ -8,6 +8,7 @@ stf-section-navbar-body {
     form > div {
       align-items: center;
       display: flex;
+      gap: rhythm(1);
       margin-bottom: rhythm(2);
 
       & > :first-child {
@@ -39,16 +40,55 @@ stf-section-navbar-body {
       }
 
       .thumbnails-container {
+        $thumbnail-height: rhythm(14) + rhythm(1);
+
         display: flex;
+
+        .drop-container {
+          display: flex;
+          flex-direction: column;
+
+          .drop-image-area {
+            align-items: center;
+            background-color: $color-light-stronger;
+            border: 1px dashed $color-neutral-light;
+            color: $color-neutral-light;
+            cursor: pointer;
+            display: flex;
+            flex: 1 0 auto;
+            justify-content: center;
+            margin-bottom: rhythm(2);
+            min-height: $thumbnail-height;
+            transition: background-color $transition-hint;
+            width: rhythm(28);
+
+            &.file-over {
+              background-color: $color-neutral-lightest;
+            }
+          }
+
+          .radio-placeholder {
+            height: rhythm(2);
+          }
+        }
+
+
+        pa-radio-group {
+          align-items: end;
+          column-gap: rhythm(4);
+          display: flex !important;
+          flex-wrap: wrap;
+          row-gap: rhythm(2);
+        }
 
         .radio-thumbnail-container {
           align-items: center;
           display: flex;
           flex-direction: column;
-          margin-right: rhythm(6);
 
           img {
             margin-bottom: rhythm(2);
+            max-height: $thumbnail-height;
           }
         }
       }
