--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
@@ -74,7 +74,7 @@ stf-section-navbar-body {
 
 
         pa-radio-group {
-          align-items: end;
+          align-items: start;
           column-gap: rhythm(4);
           display: flex !important;
           flex-wrap: wrap;
